--- a/Style/style.css
+++ b/Style/style.css
@@ -6,5 +6,27 @@
 .container{
   width: 100%;
   height: 1400px;
+  padding: 130px, 24px;
   font-family: 'Poppins', sans-serif;
+  background-image: image() ;
+}
+.header-link {
+  width: 1140px;
+  height: 75px;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+
+}
+.Treloo{
+  margin-right: ;
+}
+.header-text {
+  display: block;
+  justify-content: center;
+  padding: 310px, 160px;
+}
+.header-text-btn {
+
 }
