--- a/Style/style.css
+++ b/Style/style.css
@@ -4,11 +4,19 @@
   box-sizing: border-box;
 }
 .container{
+  font-weight: 500;
   width: 100%;
   height: 1400px;
-  padding: 130px, 24px;
   font-family: 'Poppins', sans-serif;
-  background-image: image() ;
+}
+header{
+  background-color: rgba(38, 188, 131, 0.329);
+  background-size: cover;
+  width: 1440px;
+  height: 950px;
+}
+.header-nav{
+  margin: 24px 130px;
 }
 .header-link {
   width: 1140px;
@@ -20,13 +28,31 @@
 
 }
 .Treloo{
-  margin-right: ;
+  margin-right: 430px;
 }
-.header-text {
+.header-content {
+  width: 820px;
+  height: 190px;
+  text-align:center;
+  margin-top: 310px;
+  margin-left: 310px;
+  margin-right: 310px;
+  font-weight: 600;
   display: block;
   justify-content: center;
   padding: 310px, 160px;
 }
-.header-text-btn {
+.header-text-btn{
+  font-weight: 500;
+  width: 725px;
+  height: 125px;
+  margin-top: 40px;
+  margin-bottom: 290px;
+}
+
+.special-upcoming{
+width: 1440px;
+height: 1015px;
+top: 1177px;
 
 }
