--- a/Style/style.css
+++ b/Style/style.css
@@ -4,12 +4,14 @@
   box-sizing: border-box;
 }
 .container{
+  margin: 10px 40px;
   font-weight: 500;
   width: 100%;
   height: 1400px;
   font-family: 'Poppins', sans-serif;
 }
 header{
+  background-image: url(/Image/header-bg.png);
   background-color: rgba(38, 188, 131, 0.329);
   background-size: cover;
   width: 1440px;
