--- a/Style/style.css
+++ b/Style/style.css
@@ -17,6 +17,10 @@ header{
   width: 1440px;
   height: 700px;
 }
+a{
+  text-decoration: none;
+  color: white;
+}
 .header-nav{
   margin: 24px 130px;
 }
@@ -26,23 +30,35 @@ header{
   display:flex;
   align-items: center;
   justify-content: space-between;
-  list-style: none;
+  list-style-type: none;
+  text-decoration: none;
 
+}
+.header-link-item{
+  margin-right: 50px;
 }
 .logo{
   margin-right: 430px;
+  font-family: Poppins;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 72px;
+  letter-spacing: 0em;
+  text-align: left;
+
 }
 .header-content {
+  color:white;
   width: 820px;
   height: 190px;
-  text-align:center;
+  padding: 310px, 160px;
   margin-top: 310px;
   margin-left: 310px;
   margin-right: 310px;
   font-weight: 600;
   display: block;
   justify-content: center;
-  padding: 310px, 160px;
+  text-align:center;
 }
 .header-text-btn{
   font-weight: 500;
@@ -69,5 +85,27 @@ header{
   width: 1440px;
   height: 1015px;
   top: 1177px;
+
+}
+.sp-menu{
+  list-style: none;
+  display: flex;
+  align-items:center;
+  justify-content:space-around;
+  margin-top: 80px;
+  margin-bottom: 66px;
+}
+
+.sug-ad-box{
+  display: flex;
+  align-items:center;
+  justify-content: flex-start;
+}
+.sug-ads{
+  border: 1px solid black;
+  width: 380px;
+  height: 457px;
+  top: 398px;
+  left: 130px;
 
 }
