--- a/Style/style.css
+++ b/Style/style.css
@@ -17,13 +17,24 @@ header{
   width: 1440px;
   height: 700px;
 }
-a{
+.Header-link-style{
   text-decoration: none;
   color: white;
 }
 .header-nav{
   margin: 24px 130px;
 }
+
+.btn-blog{
+  font-weight: 500;
+  margin: 2px;
+  border:1px solid white;
+  background-color: white;
+  color: rgba(62, 134, 245, 1);
+  border-radius:15px;
+  text-decoration: none;
+}
+
 .header-link {
   width: 1140px;
   height: 75px;
@@ -74,22 +85,52 @@ a{
   align-items: center;
   justify-content: space-between;
   border: 1px solid grey;
+  list-style: none;
+  color: black;
 
 }
+.Plane{
+  text-decoration: none;
+  color:black;
+}
 .header-bt-box{
+  margin-top: 60px;
+  margin-bottom: 60px;
+  display: flex;
+  justify-content: space-between;
   width: 1180px;
   height: 275px;
   border: 1px solid grey;
 }
+.header-card-box{
+  text-align: center;
+  border: 1px solid grey;
+  width: 382px;
+  height: 155px;
+  border-radius: 25px;
+}
+.header-card-box-1{
+
+}
+
+.searching-icon{
+  Width: 154px;
+  Height: 154px;
+}
 .special-upcoming{
+  text-align: center;
   width: 1440px;
   height: 1015px;
   top: 1177px;
 
 }
 .sp-menu{
-  list-style: none;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style: none;
+  list-style-type: none;
+  display: flexf;
   align-items:center;
   justify-content:space-around;
   margin-top: 80px;
@@ -97,12 +138,17 @@ a{
 }
 
 .sug-ad-box{
+  border-radius: 25px;
   display: flex;
   align-items:center;
   justify-content: flex-start;
 }
 .sug-ads{
-  border: 1px solid black;
+  background-color:antiquewhite;
+  padding: top 20px;
+  margin: 20px 60px 160px 25px;
+  border: 1 px solid black;
+  border-radius:25px;
   width: 380px;
   height: 457px;
   top: 398px;
